==> mm32/mm32_classb_cm0/iec60730b_f0160/Device/MM32F0160/HAL_lib/src/hal_gpio.c <==
#define _HAL_GPIO_C_
#include "hal_gpio.h"

void GPIO_DeInit(GPIO_TypeDef* gpio)
{
    switch (*(uint32_t*)&gpio)
    {
    case GPIOA_BASE:
        RCC_AHBPeriphClockCmd(RCC_AHBENR_GPIOA, ENABLE);
        RCC_AHBPeriphClockCmd(RCC_AHBENR_GPIOA, DISABLE);
        break;
    case GPIOB_BASE:
        RCC_AHBPeriphClockCmd(RCC_AHBENR_GPIOB, ENABLE);
        RCC_AHBPeriphClockCmd(RCC_AHBENR_GPIOA, DISABLE);
        break;
    case GPIOC_BASE:
        RCC_AHBPeriphClockCmd(RCC_AHBENR_GPIOC, ENABLE);
        RCC_AHBPeriphClockCmd(RCC_AHBENR_GPIOC, DISABLE);
        break;
    case GPIOD_BASE:
        RCC_AHBPeriphClockCmd(RCC_AHBENR_GPIOD, ENABLE);
        RCC_AHBPeriphClockCmd(RCC_AHBENR_GPIOD, DISABLE);
        break;
    default:
        break;
    }
}

void GPIO_AFIODeInit(void)
{
    GPIOA->AFRL = 0xFFFFFFFF;
    GPIOA->AFRH = 0xF00FFFFF;           /*!< PA14:SWCLK, PA13:PSWDIO */
    GPIOB->AFRL = 0xFFFFFFFF;
    GPIOB->AFRH = 0xFFFFFFFF;
    GPIOC->AFRL = 0xFFFFFFFF;
    GPIOC->AFRH = 0xFFFFFFFF;
    GPIOD->AFRL = 0xFFFFFFFF;
    GPIOD->AFRH = 0xFFFFFFFF;
}

void GPIO_StructInit(GPIO_InitTypeDef* init_struct)
{
    /* Reset GPIO init structure parameters values */
    init_struct->GPIO_Pin  = GPIO_Pin_All;
    init_struct->GPIO_Speed = GPIO_Speed_50MHz;
    init_struct->GPIO_Mode = GPIO_Mode_FLOATING;
}
